--- a/tauri/src-tauri/Cargo.toml
+++ b/tauri/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ tracing = "0.1.41"
 hyper = "1.6.0"
 once_cell = "1.21.3"
 hex = "0.4.3"
+lazy_static = "1.4"
 bytes = "1.10.1"
 async-stream = "0.3.6"
 http-body-util = "0.1"
