--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           node-version: "20"
           cache: "pnpm"
+          cache-dependency-path: tauri/pnpm-lock.yaml
 
       - name: Install dependencies
         working-directory: tauri
