--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "rust-analyzer.linkedProjects": [
         "tauri/src-tauri/Cargo.toml"
-    ]
+    ],
+    "[javascript, javascriptreact, typescript, typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      }
+
 }
