--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "tauri-apps.tauri-vscode",
     "rust-lang.rust-analyzer",
-    "qwtel.sqlite-viewer"
+    "qwtel.sqlite-viewer",
+    "esbenp.prettier-vscode"
   ]
 }
