--- a/tauri/package.json
+++ b/tauri/package.json
@@ -53,6 +53,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.4",
+    "prettier": "3.6.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   },
