--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -18,7 +18,7 @@ jobs:
           components: rustfmt,clippy
 
       - name: Check Rust formatting
-        working-directory: tauri/src-tauri
+        working-directory: desktop/src-tauri
         run: cargo fmt --check
 
   frontend-linting-and-tests:
@@ -37,7 +37,7 @@ jobs:
         with:
           node-version: "20"
           cache: "pnpm"
-          cache-dependency-path: tauri/pnpm-lock.yaml
+          cache-dependency-path: desktop/pnpm-lock.yaml
 
       - name: Install dependencies
         working-directory: tauri
