--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
-        "tauri/src-tauri/Cargo.toml"
+        "desktop/src-tauri/Cargo.toml"
     ],
     "[javascript, javascriptreact, typescript, typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
