Fix missing import

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -8,11 +8,13 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "prepare": "cd .. && husky desktop/.husky"
+    "prepare": "cd .. && husky desktop/.husky",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^13.5.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
+    "@openai/agents": "^0.0.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
