--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: Run Clippy Linting
         working-directory: desktop/src-tauri
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        # run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --all-features -- -D warnings --fix
 
       - name: Run tests
         working-directory: desktop/src-tauri
