--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -26,9 +26,9 @@ jobs:
       # run: cargo clippy --all-targets --all-features -- -D warnings
       # run: cargo clippy --all-features -- -D warnings
 
-      - name: Run tests
-        working-directory: desktop/src-tauri
-        run: cargo test
+      # - name: Run tests
+      #   working-directory: desktop/src-tauri
+      #   run: cargo test
 
   frontend-linting-and-tests:
     name: Frontend Linting and Tests
