--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "tauri-apps.tauri-vscode",
     "rust-lang.rust-analyzer",
     "qwtel.sqlite-viewer",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "editorconfig.editorconfig"
   ]
 }
