--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -21,14 +21,13 @@ jobs:
         working-directory: desktop/src-tauri
         run: cargo fmt --check
 
-      # - name: Run Clippy Linting
-      #   working-directory: desktop/src-tauri
-      # run: cargo clippy --all-targets --all-features -- -D warnings
-      # run: cargo clippy --all-features -- -D warnings
+      - name: Run Clippy Linting
+        working-directory: desktop/src-tauri
+        run: cargo clippy --all-targets --all-features -- -D warnings
 
-      # - name: Run tests
-      #   working-directory: desktop/src-tauri
-      #   run: cargo test
+      - name: Run tests
+        working-directory: desktop/src-tauri
+        run: cargo test
 
   frontend-linting-and-tests:
     name: Frontend Linting and Tests
@@ -60,6 +59,6 @@ jobs:
         working-directory: desktop
         run: pnpm test
 
-      # - name: Build
-      #   working-directory: desktop
-      #   run: pnpm build
+      - name: Build
+        working-directory: desktop
+        run: pnpm build
