--- a/desktop/package.json
+++ b/desktop/package.json
@@ -17,6 +17,7 @@
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@openai/agents": "^0.0.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
