--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -22,13 +22,12 @@ jobs:
         include:
           - platform: "ubuntu-latest"
             args: ""
-          # NOTE: uncomment these out once we want to start building the application binaries for Mac/Windows/Linux
-          # - platform: "macos-latest" # for Arm based macs (M1 and above).
-          #   args: "--target aarch64-apple-darwin"
-          # - platform: "macos-latest" # for Intel based macs.
-          #   args: "--target x86_64-apple-darwin"
-          # - platform: "windows-latest"
-          #   args: ""
+          - platform: "macos-latest" # for Arm based macs (M1 and above).
+            args: "--target aarch64-apple-darwin"
+          - platform: "macos-latest" # for Intel based macs.
+            args: "--target x86_64-apple-darwin"
+          - platform: "windows-latest"
+            args: ""
     runs-on: ${{ matrix.platform }}
     name: Rust Linting and Tests (${{ matrix.platform }})
     steps:
