chore: fix external mcp client functionality

--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -53,3 +53,4 @@ tempfile = "3.8"
 tower = { version = "0.5", features = ["util"] }
 rstest = "0.25.0"
 rstest_reuse = "0.7.0"
+sea-orm-cli = "1.1.14"
