--- a/desktop/package.json
+++ b/desktop/package.json
@@ -14,9 +14,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
     "@icons-pack/react-simple-icons": "^13.5.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@openai/agents": "^0.0.12",
+    "@openai/agents-extensions": "^0.0.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -44,6 +46,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "ollama": "^0.5.16",
+    "ollama-ai-provider": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
