--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -41,7 +41,7 @@ chrono = { version = "0.4", features = ["serde"] }
 sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
 sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
 rmcp = { version = "0.3.0", features = ["server", "macros", "transport-streamable-http-server", "transport-worker"] }
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["macros"]}
 tauri-plugin-http = "2"
 
 [dev-dependencies]
