--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -43,6 +43,8 @@ sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx
 rmcp = { version = "0.3.0", features = ["server", "macros", "transport-streamable-http-server", "transport-worker"] }
 axum = { version = "0.8.4", features = ["macros"]}
 tauri-plugin-http = "2"
+utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
+utoipa-swagger-ui = { version = "8", features = ["axum"] }
 
 [dev-dependencies]
 tauri-mcp = "0.1"
