--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -27,6 +27,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "openapi-ts.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
