--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -29,15 +29,14 @@ jobs:
         with:
           components: rustfmt,clippy
           
-      # - name: Install Ubuntu Dependencies
-      #   if: matrix.platform == 'ubuntu-latest'
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y \
-      #       libwebkit2gtk-4.1-dev \
-      #       libappindicator3-dev \
-      #       librsvg2-dev \
-      #       patchelf
+      - name: Install Ubuntu Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libwebkit2gtk-4.1-dev \
+            libappindicator3-dev \
+            librsvg2-dev \
+            patchelf
 
       - name: Check Rust formatting
         working-directory: desktop/src-tauri
