--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -29,14 +29,22 @@ jobs:
         with:
           components: rustfmt,clippy
           
+      - uses: Swatinem/rust-cache@v2
+        with:
+          cache-on-failure: true
+
+      # - name: Install dependencies
+      #   run: sudo apt-get update && sudo apt-get install -y liburing-dev pkg-config libjemalloc-dev
+          
       - name: Install Ubuntu Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libappindicator3-dev \
-            librsvg2-dev \
-            patchelf
+            libglib2.0-dev pkg-config
+# libwebkit2gtk-4.1-dev \
+# libappindicator3-dev \
+# librsvg2-dev \
+# patchelf
 
       - name: Check Rust formatting
         working-directory: desktop/src-tauri
