--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "qwtel.sqlite-viewer",
     "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
-    "vitest.explorer"
+    "vitest.explorer",
+    "serayuzgur.crates"
   ]
 }
