--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -14,6 +14,10 @@ edition = "2021"
 name = "archestra_ai_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
+[[bin]]
+name = "dump_openapi"
+path = "src/bin/dump_openapi.rs"
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
@@ -43,8 +47,9 @@ sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx
 rmcp = { version = "0.3.0", features = ["server", "macros", "transport-streamable-http-server", "transport-worker"] }
 axum = { version = "0.8.4", features = ["macros"]}
 tauri-plugin-http = "2"
-utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
-utoipa-swagger-ui = { version = "8", features = ["axum"] }
+utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "macros"] }
+utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
+utoipauto = "0.2"
 
 [dev-dependencies]
 tauri-mcp = "0.1"
