--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -54,9 +54,9 @@ jobs:
         working-directory: desktop/src-tauri
         run: cargo fmt --check
 
-      - name: Run Clippy Linting for own code
+      - name: Run Clippy Linting
         working-directory: desktop/src-tauri
-        run: clippy --no-deps
+        run: cargo clippy --all-targets --all-features -- -D warnings
 
       - name: Run tests
         working-directory: desktop/src-tauri
