--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -5,10 +5,31 @@ on:
     branches:
       - main
 
+concurrency:
+  # Cancel any running workflow for the same branch when new commits are pushed.
+  # We group both by ref_name (available when CI is triggered by a push to a branch/tag)
+  # and head_ref (available when CI is triggered by a PR).
+  group: "${{ github.ref_name }}-${{ github.head_ref }}"
+  cancel-in-progress: true
+
 jobs:
+  # See here for more information
+  # https://github.com/tauri-apps/tauri-action
   rust-linting-and-tests:
-    name: Rust Linting and Tests
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - platform: "ubuntu-latest"
+            args: ""
+          - platform: "macos-latest" # for Arm based macs (M1 and above).
+            args: "--target aarch64-apple-darwin"
+          - platform: "macos-latest" # for Intel based macs.
+            args: "--target x86_64-apple-darwin"
+          - platform: "windows-latest"
+            args: ""
+    runs-on: ${{ matrix.platform }}
+    name: Rust Linting and Tests (${{ matrix.platform }})
     steps:
       - uses: actions/checkout@v4
 
@@ -21,13 +42,24 @@ jobs:
         working-directory: desktop/src-tauri
         run: cargo fmt --check
 
-      - name: Run Clippy Linting only own code
+      - name: Run Clippy Linting
         working-directory: desktop/src-tauri
-        run: cargo clippy --workspace --all-targets --all-features --exclude tauri-mcp -- -D warnings
+        run: cargo clippy --all-targets --all-features -- -D warnings
 
       - name: Run tests
         working-directory: desktop/src-tauri
         run: cargo test
+
+      # NOTE: use this once we want to start building the application binaries for Mac/Windows/Linux
+      # - uses: tauri-apps/tauri-action@v0.5.22
+      #   with:
+      #     tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+      #     projectPath: desktop
+      #     releaseName: "App v__VERSION__"
+      #     releaseBody: "See the assets to download this version and install."
+      #     releaseDraft: true
+      #     prerelease: false
+      #     args: ${{ matrix.args }}
 
   frontend-linting-and-tests:
     name: Frontend Linting and Tests
