--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -29,6 +29,9 @@ jobs:
           - platform: "windows-latest"
             args: ""
     runs-on: ${{ matrix.platform }}
+    defaults:
+      run:
+        working-directory: ./desktop/src-tauri
     name: Rust Linting and Tests (${{ matrix.platform }})
     steps:
       - uses: actions/checkout@v4
@@ -39,19 +42,15 @@ jobs:
           platform: ${{ matrix.platform }}
 
       - name: Check Rust formatting
-        working-directory: desktop/src-tauri
         run: cargo fmt --check
         
       - name: Build shared compilation artifacts
-        working-directory: desktop/src-tauri
         run: cargo check --workspace --all-targets --all-features
 
       - name: Run Clippy Linting
-        working-directory: desktop/src-tauri
         run: cargo clippy --workspace --all-targets --all-features -- -D warnings
 
       - name: Run tests
-        working-directory: desktop/src-tauri
         run: cargo test
 
       # NOTE: use this once we want to start building the application binaries for Mac/Windows/Linux
