--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -8,6 +8,7 @@ runs:
   using: composite
   steps:
     - uses: Swatinem/rust-cache@v2
+      working-directory: ./desktop/src-tauri
       with:
         cache-on-failure: true
 
