--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -45,13 +45,10 @@ jobs:
           platform: ${{ matrix.platform }}
 
       - name: Check Rust formatting
-        run: cargo fmt --check
-        
-      - name: Run tests
-        run: cargo test
-
-      - name: Run Clippy Linting
-        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+        run:  |
+          cargo fmt --check
+          cargo test
+          cargo clippy --workspace --all-targets --all-features -- -D warnings
 
 
 
