--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -27,6 +27,16 @@ runs:
         targets: ${{ inputs.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
         components: rustfmt,clippy
 
+    - name: Cache Ubuntu Dependencies
+      if: inputs.platform == 'ubuntu-latest'
+      uses: actions/cache@v4
+      id: ubuntu-deps-cache
+      with:
+        path: |
+          /var/cache/apt/archives
+          /var/lib/apt/lists
+        key: ubuntu-deps-${{ env.UBUNTU_DEPS }}-${{ runner.os }}
+
     - name: Install Ubuntu Dependencies
       if: inputs.platform == 'ubuntu-latest'
       shell: bash
