--- a/desktop/package.json
+++ b/desktop/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/provider": "^1.1.3",
     "@icons-pack/react-simple-icons": "^13.5.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@openai/agents": "^0.0.12",
