update CI - release-please + copilot coding agent instructions/setup

--- a/.github/workflows/linting-and-tests.yml
+++ b/.github/workflows/linting-and-tests.yml
@@ -13,6 +13,20 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  lint-pr-title:
+    name: PR Title Linter
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v4
+
+      - name: Lint PR title
+        uses: grafana/shared-workflows/actions/lint-pr-title@v1.2.0
+        with:
+          config-path: "${{ github.workspace }}/.github/commitlint.config.js"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   # See here for more information
   # https://github.com/tauri-apps/tauri-action
   rust-linting-and-tests:
@@ -31,7 +45,8 @@ jobs:
     runs-on: ${{ matrix.platform }}
     name: Rust Linting and Tests (${{ matrix.platform }})
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout project
+        uses: actions/checkout@v4
 
       - name: Setup Rust
         uses: ./.github/actions/setup-rust
@@ -65,7 +80,8 @@ jobs:
     name: Frontend Linting and Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout project
+        uses: actions/checkout@v4
 
       - name: Setup frontend dependencies
         uses: ./.github/actions/setup-frontend
@@ -86,7 +102,8 @@ jobs:
     name: Verify Open API schema is up to date
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout project
+        uses: actions/checkout@v4
 
       - name: Setup Rust
         uses: ./.github/actions/setup-rust
