ci: set release please `bootstrap-sha`

--- a/.github/release-please/release-please-config.json
+++ b/.github/release-please/release-please-config.json
@@ -1,4 +1,5 @@
 {
+  "bootstrap-sha": "d78ec51d21f8f58b0ff6f87795811aa2d7900099",
   "changelog-path": "CHANGELOG.md",
   "changelog-type": "default",
   "changelog-sections": [
