--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -12,13 +12,13 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: Swatinem/rust-cache@v2
+    - uses: Swatinem/rust-cache@98c8021b550208e191a6a3145459bfc9fb29c4c0 # v2.8.0
       with:
         workspaces: desktop/src-tauri
         cache-on-failure: true
 
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@4305c38b25d97ef35a8ad1f985ccf2d2242004f2 # "stable" tag
       with:
         # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
         targets: ${{ inputs.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
@@ -28,17 +28,20 @@ runs:
       if: inputs.platform == 'ubuntu-latest'
       id: deps
       shell: bash
+      env:
+        INSTALL_TAURI_DRIVER: ${{ inputs.install-tauri-driver }}
+        RUNNER_OS: ${{ runner.os }}
       run: |
         DEPS="libwebkit2gtk-4.1-dev build-essential curl wget file libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev"
-        if [ "${{ inputs.install-tauri-driver }}" = "true" ]; then
+        if [ "$INSTALL_TAURI_DRIVER" = "true" ]; then
           DEPS="$DEPS webkit2gtk-driver xvfb"
         fi
         echo "ubuntu_deps=$DEPS" >> $GITHUB_OUTPUT
-        echo "cache_key=ubuntu-deps-$(echo $DEPS | tr ' ' '-')-${{ runner.os }}" >> $GITHUB_OUTPUT
+        echo "cache_key=ubuntu-deps-$(echo $DEPS | tr ' ' '-')-$RUNNER_OS" >> $GITHUB_OUTPUT
 
     - name: Cache Ubuntu Dependencies
       if: inputs.platform == 'ubuntu-latest'
-      uses: actions/cache@v4
+      uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       id: ubuntu-deps-cache
       with:
         path: /var/cache/apt
@@ -50,7 +53,9 @@ runs:
     - name: Install Tauri Ubuntu Dependencies
       if: inputs.platform == 'ubuntu-latest' && steps.ubuntu-deps-cache.outputs.cache-hit != 'true'
       shell: bash
-      run: sudo apt update && sudo apt-get install -y ${{ steps.deps.outputs.ubuntu_deps }}
+      env:
+        UBUNTU_DEPS: ${{ steps.deps.outputs.ubuntu_deps }}
+      run: sudo apt update && sudo apt-get install -y $UBUNTU_DEPS
 
     # install the latest version of `tauri-driver`.
     # note: the tauri-driver version is independent of any other Tauri versions
