--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -48,17 +48,12 @@ jobs:
         run: |
           echo "$OUTPUTS"
 
-  linting-and-tests:
-    name: Linting and Tests
-    needs: release-please
-    uses: ./.github/workflows/linting-and-tests.yml
-
   build-desktop-application-and-create-github-release:
     name: Build desktop application and create GitHub release
     runs-on: ubuntu-latest
     if: needs.release-please.outputs.desktop_release_created
     needs:
-      - linting-and-tests
+      - release-please
     steps:
       - name: Checkout project
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
