--- a/.github/workflows/on-pull-requests.yml
+++ b/.github/workflows/on-pull-requests.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 10 # give Claude a bit more context
-          persist-credentials: false
+          persist-credentials: true # credentials are needed here as Claude will use them to read stuffs
 
       - name: Run Claude Code Review
         id: claude-review
@@ -113,7 +113,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 10 # give Claude a bit more context
-          persist-credentials: false
+          persist-credentials: true # credentials are needed here as Claude will use them to read stuffs
 
       - name: Run Claude Code
         uses: anthropics/claude-code-action@e26577a930883943cf9d90885cd1e8da510078dd # beta tag
